# openCV_c-_videoCapture

./: CMakeLists.txt  main.cpp  videoProcess.cpp  videoProcess.h
